update sso, revise external java udf